# metodos2

./: .gitignore  CMakeLists.txt  README.md
data/: H5x5.txt  M3x3.txt  M5x5.txt
libs/algebros/include/: Matrix.hpp  Vector.hpp
libs/algebros/src/: Matrix.cpp  Vector.cpp
libs/methodic/include/: Autos.hpp  ClosedNewtonCotes.hpp  Derivative.hpp  DisplacementPower.hpp  EigenMethod.hpp  ExplicitEuler.hpp  GaussLegendre.hpp  Householder.hpp  IntegrationMethod.hpp  InversePower.hpp  Jacobi.hpp  LU.hpp  Log.hpp  OpenNewtonCotes.hpp  QR.hpp  RegularPower.hpp  RungeKutta.hpp
libs/methodic/python/: FinitDiff.py  PredCorre4Order.py  RungeKutta3Order.py  RungeKutta4Order.py
libs/methodic/src/: Autos.cpp  ClosedNewtonCotes.cpp  Derivative.cpp  DisplacementPower.cpp  ExplicitEuler.cpp  GaussLegendre.cpp  Householder.cpp  IntegrationMethod.cpp  InversePower.cpp  Jacobi.cpp  LU.cpp  Log.cpp  OpenNewtonCotes.cpp  QR.cpp  RegularPower.cpp  RungeKutta.cpp
src/: test.cpp
tarefa1/: results_for_table.ipynb  tarefa.py
tarefa2/: OUTPUT.txt  main.py
tarefa5/: tarefa5.py
